--- a/notes/ask.tex
+++ b/notes/ask.tex
@@ -2,7 +2,7 @@
 Una vez se conocen las expectativas, desafíos y preconcepciones anteriores de los \gls{stkhldrs}, se establece un \gls{probemp}. Algunas técnicas a aplicar incluyen
 \begin{itemize}
     \item {\gls{strctrdthnkng}}
-    \item {\gls{5w}, para determinar la causa principal de un problema}
+    \item {\textbf{\textit{Five Why's}}, práctica para encontrar la raíz de un problema, donde se pregunta 'por qué?' cinco veces. Así, se determina la causa principal de un problema}
     \item {\gls{gpnlss}, para encontrar déficits en el proyecto}
 \end{itemize}
 
