--- a/notes/datos.tex
+++ b/notes/datos.tex
@@ -5,7 +5,7 @@ Los \textbf{datos} son conjuntos de hechos, y tienen un \textbf{ciclo de vida} i
     \item {\textbf{Ecosistema}: Engloba todos los elementos que interactúan entre si para su manejo completo: \textbf{producción, administración, almacenamiento, análisis y distribución}. \textit{Esto incluye hardware y software}}
     \item {\textbf{Diseño}: Organización de la información por formato, tipo o forma de almacenamiento}
     \item {\textbf{Estrategia}: Gestión de la gente, herramientas y procesos a usar en el análisis}
-    \item {\textbf{Gobernanza}: Manejo formal de los activos de datos de una compañía. Parte del proceso consiste en migrar o almacenar la información en una ubicación central, ya sea física o virtual}
+    \item {\textbf{Gobernanza}: Manejo formal de los activos de datos de una compañía. Parte del proceso consiste en migrar o almacenar la información en una ubicación central, física o virtual}
     \item {\textbf{Toma de Decisiones Inspirada en Datos}: Guía del \gls{probemp}, que de por si nunca será más poderoso que su combinación con \textbf{experiencia humana, observación e intuición}. También es recomendable considerar fuentes diversas de datos para encontrar similitudes entre ellas}    
 \end{itemize} 
 
