--- a/notes/design.tex
+++ b/notes/design.tex
@@ -38,4 +38,9 @@ Proceso utilizado para resolver problemas complejos desde el foco del usuario. L
     \item {\textbf{Testear} y obtener comentarios de parte de los \gls{stkhldrs}}
 \end{itemize}
 
+\subsection{Tableau}
+Tableau es una plataforma de análisis y de inteligencia de negocios (BI), que permite visualizar datos, principalmente a través de \textbf{Visualizaciones Dinámicas}: visualizaciones interactivas o que cambian con el tiempo
+
+Además de los elementos de \textit{DataViz} más comunes, Tableau ofrece \textbf{tablas resaltadas (con formato condicional), mapas térmicos, mapas de densidad, diagramas gantt}, entre otros. Además, similar a SQL, permite combinar datos a través de JOINs
+
 \newpage
