--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -2,12 +2,10 @@
 % la idea es recolectar destrezas o habilidades blandas de otras secciones
 
 \section{Destrezas del Analista de Datos}
-El analista de datos tiene dos funciones principales: analizar los datos en si, y presentar los resultados de forma efectiva
+Un analista de datos tiene dos funciones principales: el análisis en si, y presentar los resultados de forma efectiva. Estos se comparten a través de instancias como reuniones, presentaciones y documentos electrónicos. Así, es necesario desarrollar \textbf{habilidades blandas}: cualidades y comportamientos no técnicos, que describen el trabajo de una persona
 
 \subsection{Pensamiento Analítico}
-Notar la diferencia entre pensamiento y \textbf{Habilidades Analíticas}: cualidades y características asociadas con la resolución de problemas usando hechos,  como ser \textbf{curioso}, entender el \gls{cntxt} de la información y practicar \gls{strctrdthnkng}
-
-El \textbf{Pensamiento} es el proceso de identificar y definir un problema, para luego resolverlo usando datos de forma organizada, paso a paso. Presenta 5 aspectos principales:
+Notar la diferencia entre pensamiento y \textbf{Habilidades Analíticas}: cualidades asociadas con la resolución de problemas usando hechos,  como ser \textbf{curioso}, entender el \gls{cntxt} de la información y practicar \gls{strctrdthnkng}. El \textbf{Pensamiento} es el proceso de identificar y definir un problema, para resolver de forma organizada en base a datos. Los aspectos principales son
 \begin{itemize}
     \item{\textbf{Visualización}: Representación gráfica de la información}
     \item{\textbf{Ser Estratégico}: Crear planes para resolver un problema dado ciertos datos, manteniendo el enfoque, calidad y utilidad}
@@ -18,116 +16,6 @@ El \textbf{Pensamiento} es el proceso de identificar y definir un problema, para
         \item[Big Picture Thinking]: Visión del panorama completo
         \item[Detail Oriented Picture]: Estudio de las partes en detalle
     \end{description}}
-\end{itemize}
-
-\subsection{Reuniones y Presentaciones}
-Los datos, y sus resultados, se comparten a través de instancias como reuniones. La presentación se debe mantener concisa, y su creación empieza por definir su \textbf{propósito}. Para que sea fácil de entender, se comienza con ideas generales, y sigue algún tipo de flujo lógico. 
-
-Además de entender el objetivo de la presentación, es importante considerar las expectativas y deseos de los \gls{stkhldrs} para anticipar preguntas. La \textbf{audiencia} se puede distraer fácilmente, tiene la mente ocupada o no siempre verá los pasos tomados para llegar a cierta conclusión. Tampoco hay que asumir que conocen la terminología y los acrónimos, o que conocen de eventos o información previa 
-
-Es necesario que la presentación tenga un atractivo visual que capte la atención. Las visuales debieran cumplir con la regla de los cinco segundos, donde la audiencia entiende la idea principal en dicha cantidad de tiempo. Al momento de crear diapositivas, se debe limitar la cantidad de texto, y seguir un orden similar al siguiente: \textit{agenda/estructura, propósito, datos/análisis, propuesta, llamada a acción}. Tambien se puede compartir un \textbf{apéndice}: información que no está en la presentación en si, pero puede ser útil tener al alcance
-
-La presentación necesita pausas intencionales para mostrar los datos, junto a puntos de conversación para abordar temas que aparezcan. La idea es involucrar a la audiencia al incluir otras voces como personas expertas en la materia, pero es necesario evitar que una persona desvíe la conversación. Se finaliza con recomendaciones, y se piden opiniones al cierre. 
-
-Es necesario anticipar preguntas a través de las expectativas de los \gls{stkhldrs}. Al momento de la pregunta, se debe escuchar completa y repetir de ser necesario, porque es importante entender el contexto detrás. La respuesta debe ser corta y precisa, pero si no hay una, se debe reconocer para tomar acción e investigar al respecto
-
-De cualquier forma, es buena idea preparar un borrador como equipo, con respuestas a preguntas anticipadas. Se puede conversar con colegas y jefes para pedir comentarios o preguntas sobre la presentación o documento, como la \textbf{Prueba del Colega}: un ensayo de presentación junto a alguien que no sepa del tema, para estudiar qué preguntas, conclusiones y comentarios pueda generar. La idea es encontrar preguntas complejas o partes poco claras por seguridad
-
-
-
-
-\begin{itemize}
-    \item {Limitar los hábitos nerviosos y controlar la emoción. Practicar buena postura, mantenerse quieto y moverse con propósito. Hacer contacto visual positivo}
-    \item {Hablar con oraciones cortas, generar instancias para pausas intencionales, mantener un tono de voz uniforme}
-\end{itemize}
-
-\paragraph{Considerar las Limitaciones de los Datos}
-\begin{itemize}
-    \item {Análisis crítico de las correlaciones}
-    \item {Observar el \gls{cntxt}}
-    \item {Comprender las fortalezas y debilidades de las herramientas}
-\end{itemize}
-
-\paragraph{Tipos de Objeciones}
-\textbf{Acerca de los datos}
-\begin{itemize}
-    \item {Dónde se obtuvieron?}
-    \item {De qué sistema vienen?}
-    \item {Qué transformaciones se le hicieron?}
-    \item {Qué tan reciente o precisos son?}
-\end{itemize}
-\textbf{Acerca del Análisis}
-\begin{itemize}
-    \item {Se puede replicar?}
-    \item {Quién entregó sus opiniones al respecto?}
-\end{itemize}
-\textbf{Acerca de los Resultados}
-\begin{itemize}
-    \item {Estos resultados existen para otros periodos de tiempo?}
-    \item {Se controlaron las diferencias en los datos?}
-\end{itemize}
-
-\paragraph{Respuestas para posibles objeciones}
-\begin{itemize}
-    \item {Comunicar cualquier suposición}
-    \item {Explicar por qué el análisis puede diferir de las expectativas}
-    \item {Reconocer la validez de la objeción y tomar acción para seguir investigando}
-\end{itemize}
-
-
-\begin{table}
-    \centering
-    \begin{tabular}{|p{4.8cm}|p{4.8cm}|p{4.7cm}}
-        \hline
-        \multicolumn{3}{|c|}{Prácticas en Reuniones} \\
-        \hline
-        \textbf{Antes} & \textbf{Durante}  &\textbf{Después} \\
-        \hline
-        \begin{description}
-            \item {Establecer propósitos, metas y resultados deseados}
-            \item {Determinar preguntas o solicitudes a abordar}
-            \item {Reconocer a los asistentes}
-            \item {Preparar una \textbf{agenda} que incluya horas de inicio y finalización, ubicación, acceso remoto, objetivos y material complementario}
-            \item {Distribuir la agenda de antemano}
-        \end{description} & \begin{description}
-            \item {Hacer introducciones si son necesarias y revisar mensajes claves}
-            \item {Presentar los datos junto a cualquier observación, interpretación e implicancia}
-            \item {Hacer participar a los asistentes en base a su experiencia y puntos de vista}
-            \item {Tomar notas}
-            \item {Determinar pasos a seguir}
-        \end{description} &  \begin{description}
-            \item {Distribuir notas, datos y material extra}
-            \item {Confirmar pasos a seguir y plazos para medidas adicionales}
-            \item {Pedir comentarios y preguntas}
-        \end{description} \\
-        \hline
-    \end{tabular}
-\end{table}
-
-\subsection{Comunicación Clara y Efectiva}
-Al mantener el diálogo con colegas, \gls{stkhldrs} y miembros del equipo, se preservan las buenas relaciones. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
-
-\subsubsection{Identificar antes de Comunicar}
-\begin{itemize}
-    \item {\textbf{Hechos} y datos concretos}
-    \item {\textbf{\gls{cntxt}} y cualquier cosa que facilite la comprensión}
-    \item {\textbf{Incógnitas}, conceptos desconocidos o cosas que se pasen por alto}
-    \item {\textbf{Temas comunes} para preguntas, como objetivos, recursos y seguridad}
-\end{itemize}
-
-\subsubsection{Tips para Comunicación Efectiva}
-\begin{itemize}
-    \item {Aprender en el camino y realizar preguntas}
-    \item {Practicar buenos hábitos de escritura para diálogo por escrito. Leer en voz alta antes de enviar la conversación}
-    \item {Responder en un tiempo adecuado}
-    \item {Ser claro con las necesidades, al igual que la historia a contar a través de los datos}
-\end{itemize}
-
-\subsubsection{Balance de Expectativas y Objetivos}
-\begin{itemize}
-    \item {Ser razonables y realistas al establecer plazos y metas}
-    \item {Identificar desafíos y problemas con anticipación, además de posibles soluciones}
-    \item {Resolver conflictos al replantear el problema, determinar el contexto detrás del conflicto, y tener un diálogo con altura de miras}
 \end{itemize}
 
 \subsection{\gls{stkhldrs} más Comunes}
@@ -142,5 +30,31 @@ Al mantener el diálogo con colegas, \gls{stkhldrs} y miembros del equipo, se pr
         \item {\textbf{Especialistas de Depósitos de Datos}: Desarrollo de procesos y procedimientos para guardar y organizar datos de forma efectiva}
     \end{itemize}}
 \end{itemize}
+
+\subsection{Comunicación Clara y Efectiva}
+Al mantener el diálogo con colegas, \gls{stkhldrs} y miembros del equipo, se preservan las buenas relaciones. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
+
+Al igual que en otros procesos, hay que identificar \textbf{hechos} y datos concretos, el \gls{cntxt} detrás y posibles conceptos desconocidos o cosas que se pasen por alto. Siempre existen temas comunes para preguntas, como objetivos, recursos y seguridad
+
+La comunicación se aprende en el camino, y algunas de las expectativas refieren a responder en un tiempo adecuado, o ser claro con la necesidad del mensaje. Se necesitan buenos hábitos de escritura al momento de hablar por escrito, y se recomienda leer en voz alta antes de enviar alguna conversación
+
+Al momento de comunicar expectativas y objetivos, es necesario ser razonables y realistas al momento de establecer plazos o metas. Idealmente, se identifican desafíos y problemas con anticipación con el fin de encontrar soluciones. Cuando ocurre algún conflicto, es útil replantear el problema, determinar el contexto detrás del conflicto y tener un diálogo con altura de miras
+
+\subsection{Reuniones y Presentaciones}
+Los datos, y sus resultados, se comparten en instancias como reuniones. La presentación se debe mantener concisa, y su creación empieza por definir su \textbf{propósito}. Para que sea fácil de entender, se comienza con ideas generales, y sigue algún tipo de flujo lógico. 
+
+Además de entender el objetivo de la presentación, es importante considerar las expectativas y deseos de los \gls{stkhldrs} para anticipar preguntas. La \textbf{audiencia} se puede distraer fácilmente, tiene la mente ocupada o no siempre verá los pasos tomados para llegar a cierta conclusión. Tampoco hay que asumir que conocen la terminología y los acrónimos, o que conocen de eventos o información previa 
+
+El presentador debe practicar un buen lenguaje corporal, al exhibir una buena postura, mantenerse quieto y moverse con propósito. Su voz debe mantener un tono de voz uniforme, hablar con oraciones cortas y hacer contacto visual positivo. La presentación necesita pausas intencionales para mostrar los datos, junto a puntos de conversación para abordar temas que aparezcan. La idea es involucrar a la audiencia al incluir otras voces como personas expertas en la materia, pero es necesario evitar que una persona desvíe la conversación
+
+Es necesario que la presentación tenga un atractivo visual que capte la atención. Las visuales debieran cumplir con la regla de los cinco segundos, donde la audiencia entiende la idea principal en dicha cantidad de tiempo. Al momento de crear diapositivas, se debe limitar la cantidad de texto, y seguir un orden similar al siguiente: \textit{agenda/estructura, propósito, datos/análisis, propuesta, llamada a acción}. Tambien se puede compartir un \textbf{apéndice}: información que no está en la presentación en si, pero puede ser útil tener al alcance
+
+Es necesario anticipar preguntas a través de las expectativas de los \gls{stkhldrs}. Al momento de la pregunta, se debe escuchar completa y repetir de ser necesario, porque es importante entender el contexto detrás. La respuesta debe ser corta y precisa, pero si no hay una, se debe reconocer para tomar acción e investigar al respecto
+
+Es natural que se reciban objeciones, o que la información presentada sea limitada. Se debe mantener el \gls{cntxt} en mente, y comprender las fortalezas y debilidades de las herramientas usadas al momento del análisis, además de realizar una evaluación crítica de las correlaciones. Las objeciones deben ser reconocidas y validadas, además de tomar acción para seguir investigando. Sin embargo, el análisis puede ser válido y haya que explicar por qué este puede diferir de las expectativas, además de cualquier suposición
+
+Algunas preguntas y objeciones se enfocan en aspectos de los datos (\textit{como su captura, sistema de origen, transformaciones que pudieron sufrir, precisión o actividad reciente}), en el análisis en si (\textit{por ejemplo, si se puede replicar}) o en los resultados obtenidos (\textit{como comparaciones con otros periodos de tiempo})
+
+De cualquier forma, es buena idea preparar un borrador como equipo, con respuestas a preguntas anticipadas. Se puede conversar con colegas y jefes para pedir comentarios o preguntas sobre la presentación o documento, como la \textbf{Prueba del Colega}: un ensayo de presentación junto a alguien que no sepa del tema, para estudiar qué preguntas, conclusiones y comentarios pueda generar. La idea es encontrar preguntas complejas o partes poco claras por seguridad. Además, se recomienda pedir recomendaciones y comentarios al cierre como retroalimentación para futuras presentaciones
 
 \newpage
