--- a/notes/share.tex
+++ b/notes/share.tex
@@ -118,3 +118,52 @@ Herramienta que organiza la información entrante desde distintas fuentes, en fo
         \item {\textbf{Paneles Operativos}: Escala temporal de días, semanas o meses, prácticamente a tiempo real}
         \item {\textbf{Paneles Analíticos}: Uso, análisis y predicciones como categoría más técnica, realizadas por \textit{data scientists}}
     \end{itemize}
+\begin{table}
+    \centering
+    \begin{tabular}{|p{2.9cm}|p{5.4cm}|p{5.5cm}|}
+        \hline
+        \multicolumn{3}{|c|}{Beneficios de paneles} \\
+        \hline
+        & \textbf{Para analistas} & \textbf{Para \Gls{stkhldrs}} \\
+        \hline
+        \small{\textbf{Centralización}} & Compartir una única fuente de datos con los interesados & Trabajar con visión integral de datos, iniciativas y procesos \\
+        \hline
+        \small{\textbf{Visualización}} & Mostrar y actualizar datos \break entrantes en tiempo real & Detectar patrones y tendencias cambiante más rápidamente \\
+        \hline
+         \small{\textbf{Percepción}} & Extraer información desde \break diferentes conjuntos de datos & Comprender la historia detrás de los números \\
+        \hline
+        \small{\textbf{Personalización}} & Crear vistas personalizadas para los interesados & Profundizar en preocupaciones o intereses específicos \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{|p{1.8cm}|p{5.9cm}|p{5.9cm}|}
+        \hline
+        & \textbf{\textit{Reports}} & \textbf{\textit{Dashboard}} \\
+        \hline
+        \textbf{Pros} & \begin{description}
+            \item {Datos de alto nivel histórico}
+            \item {Fácil de diseñar y usar}
+            \item {Datos limpios y ordenados}
+        \end{description} & \begin{description}
+            \item {Automático e interactivo}
+            \item {Mejor acceso para \Gls{stkhldrs}}
+            \item {Bajo mantenimiento}
+        \end{description} \\
+        \hline
+        \textbf{Contras} & \begin{description}
+            \item {Mantenimiento contínuo}
+            \item {Estático}
+            \item {Menos atractivo visual}
+        \end{description} & \begin{description}
+            \item {Diseño requiere más trabajo}
+            \item {Puede ser confuso}
+            \item {Datos sin procesar}
+        \end{description} \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\newpage
